<resources>
    <string name="app_name">Quotes</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search Quote</string>
    <string name="search_hint">Search Quote</string>
    <string name="error_message">Error Occurred</string>
    <string name="mnuOverFlow">Over Flow Menu</string>
    <string name="mnuAuthor">Author</string>
    <string name="mnuCategory">Category</string>
    <string name="mnuSortOrder">Descending Order</string>
    <string name="mnuRandom">Random Quotes</string>
    <string name="facebook_app_id">507320129404749</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">Categories</string>
    <string name="add_widget">Add widget</string>

    <string name="error">Error with inserting Quotes</string>
    <string name="success">Quotes inserted successfully</string>

    <string name="text">Test</string>
    <string name="adclose">Ad is closed!</string>
    <string name="onAdFailedToLoad">Ad is failed!</string>
    <string name="onAdLeftApplication">Ad left application!</string>
    <string name="name">Author Name!</string>
    <string name="qtext">Quote Text</string>
    <string name="search">Search</string>
    <string name="sharebtn">Share Button</string>
    <string name="copybtn">Copy Button</string>
    <string name="pushnotification">Push Notification</string>
    <string name="CopiedtoClipboard">Copied to Clipboard</string>


</resources>
