<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/layout_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:padding="10dp">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imgCopy"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:layout_toLeftOf="@+id/imgShare"
            android:layout_centerInParent="true"
            android:paddingStart="5dp"
            android:focusable="false"
            android:contentDescription="@string/copybtn"/>

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_black_24dp"
            android:layout_centerInParent="true"
            android:focusable="false"
            android:contentDescription="@string/sharebtn"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_full_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:background="#537db3"
        android:layout_below="@+id/layout_action_buttons">

        <RelativeLayout
            android:id="@+id/layout_full_quote"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#537db3"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/layout_quote_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/quote_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/qtext"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

            </LinearLayout>

            <TextView
                android:id="@+id/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="1dip"
                android:gravity="right"
                android:text="@string/name"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:layout_below="@id/layout_quote_text"/>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/bqe_web"
        android:layout_centerHorizontal="true"
        android:alpha=".10"
        android:visibility="gone"/>




</RelativeLayout>
