<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--  ListRow Left side Thumbnail image -->

    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="3dip"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dip"
        android:visibility="gone">

        <ImageView
            android:id="@+id/author_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/author_image"
            android:contentDescription="@null"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/lin_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="#bbd0ec">

        <RelativeLayout
            android:id="@+id/layout_action_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/thumbnail"
            android:layout_toRightOf="@+id/thumbnail">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:gravity="start"/>

            <ImageView
                android:id="@+id/imgCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_toStartOf="@+id/imgShare"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:focusable="false"
                android:visibility="gone"
                android:contentDescription="@string/copybtn"/>

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:focusable="false"
                android:visibility="gone"
                android:contentDescription="@string/sharebtn"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_quote_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_action_buttons"
            android:layout_toEndOf="@+id/thumbnail">

            <TextView
                android:id="@+id/quote_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="18sp"
                android:text="@string/qtext"
                android:gravity="left"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_quote_text"
            android:layout_toEndOf="@+id/thumbnail"
            android:paddingTop="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="14sp"
                android:gravity="end"
                android:text="@string/name"/>

        </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>




</RelativeLayout>
